# jamm-worldid

./: Cargo.toml  README.md  SPIKE.md
docs/: AI_WORKFLOW.md  GATE_LOG.md  HACKATHON.md  PROMPTS.md  SLICE_PLAN.md  rp-signature.md  verify-flow.md
src/: lib.rs  nullifier.rs  signature.rs  verify.rs
